# python-fundamentals-notes

./: .gitignore  PROJECT_SETUP_GUIDE.md  README.md  pyproject.toml
My Notes/: 01_print_function.ipynb  02_input_function.ipynb  03_strings.ipynb  04_string_methods.ipynb  05_variables_expressions.ipynb  06_data_types.ipynb  07_lists.ipynb  08_tuples.ipynb  09_sets.ipynb  10_dictionaries.ipynb  11_conditionals.ipynb  12_loops.ipynb  13_file_reading.ipynb  14_file_writing.ipynb  15_file_operations.ipynb  16_functions.ipynb  17_builtin_functions.ipynb  18_custom_functions.ipynb  19_parameters_arguments.ipynb  20_modules_packages.ipynb  21_numpy_basics.ipynb  22_numpy_computation.ipynb  23_numpy_aggregations.ipynb  24_pandas_series_dataframe.ipynb  25_pandas_operations.ipynb  26_pandas_file_io.ipynb  27_pandas_exploration.ipynb  28_matplotlib_basics.ipynb  29_seaborn_visualizations.ipynb  30_linear_regression.ipynb
My Notes/data/: log.txt  marks.txt  output.txt  print_output.txt  python_lines.txt  replaced.txt  sample.txt  sample_func.txt  search_demo.txt  students.csv  students_upper.csv  temps_f.txt  users.txt  wordlist.txt
Sessions/Session 1 Notes/: S_1_0_Python - Output Statements.ipynb  S_2_Python - Input Statements.ipynb  S_3_0_Python - Strings.ipynb  S_4_1_Python - Strings Operations.ipynb  S_5_4_Python - Variables, Expressions _ Statements.ipynb  S_6_3_Python - Data Types and Type casting.ipynb
Sessions/Session 2 Notes/: S2_1_Python - Lists Operations.ipynb  S2_2_Python_Tuple.ipynb  S2_3_Python - Sets.ipynb  S2_4_Python - Dictionaries.ipynb  (+2 more)
(+25 files in other folders)
