[project]
name = "python-fundamentals-bits"
version = "0.1.0"
description = "Python fundamentals course notes from BITS Pilani"
readme = "README.md"
authors = [
    { name = "Vamsikumar Gudala", email = "vamsikumar196@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
]
